# PoissonEquationForImaging

./: CMakeLists.txt  README.md  alloc_mem_from_NUMA_node.cpp
GaussElimination/: CMakeLists.txt  gausselimination.c  poisson.c  poisson.h
SparseCholesky/: CMakeLists.txt  CREDIT.md  PoissonWithCholesky.c  PoissonWithCholesky.h  sparsecholesky.c
